# SC3020-Projects

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _config.yml
.github/workflows/: lint-1.yml  lint-2.yml  unittest.yml
docs/: contribute.md  unittest.md
project1/: .gitignore  CMakeLists.txt  README.md
project1/docs/report/src/: SC3020.tex
project1/docs/report/src/references/: ref.bib
project1/docs/report/src/sections/: 1.Introduction.tex  2.Storage_design.tex  3.Index_design.tex  4.Experiments.tex  BTreeArch.tex
project1/docs/report/src/title/: titlepage.tex
project1/include/: b_plus_tree.h  block.h  block_list.h  block_ptr.h  buffer.h  data_loader.h  data_ptr.h  database_manager.h  field.h  fields.h  file_manager.h  index.h  managers.h  record.h  schema.h  utils.h
project1/misc/: draw_plots.py
project1/src/: CMakeLists.txt  b_plus_tree.cpp  block.cpp  block_list.cpp  block_ptr.cpp  buffer.cpp  data_loader.h  data_ptr.cpp  database_manager.cpp  fields.cpp  file_manager.cpp  index.cpp  main.cpp  managers.cpp  record.cpp  schema.cpp  utils.cpp
project1/test/: test_block.cpp  test_block_ptr.cpp  test_data_loader.cpp  test_data_ptr.cpp  test_fields.cpp  test_index.cpp  test_manager.cpp  test_query_result.py  test_schema.cpp  test_utils.cpp
project2/: .gitignore  README.md  pyproject.toml  requirements.txt
project2/scripts/: headers.json  upload.py
project2/src/: main.py
project2/src/sc3020/: __main__.py  interface.py  main.py  preprocessing.py  project.py  visualizer.html  whatif.py
project2/src/sc3020/database/: ExecutionTree.py  setup.sql  tcph.py  test.ipynb  visualizer.py
project2/src/sc3020/examples/: example1.sql  example2.sql  example3.sql  example4.sql  example5.sql
project2/src/sc3020/templates/: connection_guide.md  index.html  layout.html  title.html
project2/src/utils/: data_downloader.py  setup_db.py
project2/test/: run_suite.py  utils.py
scripts/: lint-cpp.sh  lint-python.sh
